--- a/i3/config
+++ b/i3/config
@@ -19,7 +19,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
+set $refresh_i3status killall -SIGUR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
@@ -90,11 +90,11 @@ set $ws1 " Code"
 set $ws2 " Web"
 set $ws3 " Terminal"
 set $ws4 " Email"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
+set $ws5 " Slack"
+set $ws6 " Teams"
+set $ws7 " Notion"
+set $ws8 "8 Misc"
+set $ws9 "9 Misc"
 set $ws10 " Spotify"
 
 # switch to workspace
@@ -102,11 +102,11 @@ bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
 bindsym $mod+3 workspace $ws3
 bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
 
 # move focused container to workspace
@@ -114,18 +114,20 @@ bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+2 move container to workspace $ws2
 bindsym $mod+Shift+3 move container to workspace $ws3
 bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
 # Workspace Apps
 assign [class="Code"] $ws1
-assign [class="firefox"] $ws2
-assign [class="Mail"] $ws4
-assign [class="spotify"] $ws10
+assign [class="Thunderbird"] $ws4
+assign [class="Slack"] $ws5
+assign [class="Microsoft Teams - Preview"] $ws6
+assign [class="notion-snap"] $ws7
+assign [class="Spotify"] $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -182,26 +184,27 @@ hide_edge_borders both
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-	colors {
-		background $bg-color
-		separator #757575
-		#			border			background		text
-		focused_workspace	$bg-color		$bg-color		$text-color
-		inactive_workspace	$inactive-bg-color	$inactive-bg-color	$inactive-text-color
-		urgent_workspace	$urgent-bg-color	$urgent-bg-color	$text-color
-	}	
-}
+# bar {
+#         colors {
+# 		        background $bg-color
+#		        separator #757575
+#		        #			border			background		text
+#		        focused_workspace	$bg-color		$bg-color		$text-color
+#		        inactive_workspace	$inactive-bg-color	$inactive-bg-color	$inactive-text-color
+#		        urgent_workspace	$urgent-bg-color	$urgent-bg-color	$text-color
+#	}	
+# }
 
 # Monitor Positions
 exec --no-startup-id xrandr --output DP-2 --auto --left-of eDP-1
 
 # Workspace Monitor Lock
 workspace $ws1 output DP-2
-workspace $ws2 output eDP-1
 workspace $ws3 output DP-2
 workspace $ws4 output eDP-1
+workspace $ws5 output eDP-1
+workspace $ws6 output eDP-1
+workspace $ws7 output eDP-1
 workspace $ws10 output eDP-1
 
 # Lock Binding
@@ -219,8 +222,14 @@ exec --no-startup-id dconf write /org/gnome/settings-daemon/plugins/cursor/activ
 
 # Startup Apps
 exec code
-exec firefox
-exec thunderbird
+exec prospect-mail
+exec slack
+exec notion-snap
 
 # Floating Apps
 for_window [class="Enpass"] floating enable resize set 900 600
+for_window [class="Devtools"] floating enable
+
+# Polybar
+exec polybar primary
+exec polybar secondary
