--- a/i3/config
+++ b/i3/config
@@ -233,8 +233,7 @@ for_window [class="Enpass"] floating enable resize set 900 600
 for_window [class="Devtools"] floating enable
 
 # Polybar
-exec polybar primary
-exec polybar secondary
+exec_always --no-startup-id ~/.config/i3/polybar.sh &
 
 # Gaps
 for_window [class=".*"] border pixel 0
