--- a/polybar/config
+++ b/polybar/config
@@ -12,10 +12,8 @@
 ; Polybar config
 
 [colors]
-;background = ${xrdb:color0:#222}
 background = #002b36
 background-alt = #073642
-;foreground = ${xrdb:color7:#222}
 foreground = #93a1a1
 foreground-alt = #eee8d5
 primary = #ffb52a
@@ -40,7 +38,7 @@ border-size = 0
 border-color = #00000000
 
 padding-left = 0
-padding-right = 2
+padding-right = 1
 
 font-0 = Hack Nerd Font:size=10;0
 font-1 = FontAwesome 6 Free:size=10;1
@@ -57,9 +55,9 @@ inherits = bar/base
 monitor = DP-2
 
 module-margin-left = 1
-module-margin-right = 2
+module-margin-right = 1
  
-modules-right = filesystem volume wlan eth battery date powermenu
+modules-right = filesystem volume wlan battery date powermenu
  
 [bar/secondary]
 inherits = bar/base
@@ -98,28 +96,11 @@ mount-0 = /
  
 label-mounted = %mountpoint%: %percentage_used%%
 label-mounted-underline = ${colors.foreground}
+label-mounted-padding = 1
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
- 
-[module/bspwm]
-type = internal/bspwm
- 
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
- 
-label-occupied = %index%
-label-occupied-padding = 2
- 
-label-urgent = %index%!
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
- 
-label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
- 
+label-unmounted-padding = 1
+
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
@@ -136,13 +117,13 @@ label-mode-background = ${colors.primary}
  
 ; focused = Active workspace on focused monitor
 label-focused = %name%
-label-focused-background = ${module/bspwm.label-focused-background}
+label-focused-background = ${colors.background-alt}
 label-focused-underline = ${colors.foreground}
-label-focused-padding = ${module/bspwm.label-focused-padding}
+label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %name%
-label-unfocused-padding = ${module/bspwm.label-occupied-padding}
+label-unfocused-padding = 2
  
 ; visible = Active workspace on unfocused monitor
 label-visible = %name%
@@ -152,8 +133,8 @@ label-visible-padding = ${self.label-focused-padding}
  
 ; urgent = Workspace with urgency hint set
 label-urgent = %name%
-label-urgent-background = ${module/bspwm.label-urgent-background}
-label-urgent-padding = ${module/bspwm.label-urgent-padding}
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 2
  
 [module/mpd]
 type = internal/mpd
@@ -176,28 +157,12 @@ interval = 3.0
 format-connected = <label-connected>
 format-connected-underline = ${colors.foreground}
 label-connected =  %essid%
+label-connected-padding = 1
  
-;format-disconnected = 
 format-disconnected = <label-disconnected>
 format-disconnected-underline = ${colors.foreground}
 label-disconnected =  
- 
- 
-[module/eth]
-type = internal/network
-interface = enp0s31f6
-interval = 3.0
- 
-format-connected-underline = ${colors.foreground}
-format-connected-prefix = 
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
- 
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+label-disconneded-padding = 1
  
 [module/date]
 type = internal/date
@@ -214,6 +179,7 @@ format-prefix-foreground = ${colors.foreground-alt}
 format-underline = ${colors.foreground}
  
 label = %date%%time%
+label-padding = 1
  
 [module/volume]
 type = internal/volume
@@ -222,11 +188,13 @@ format-volume = <ramp-volume> <bar-volume>
 label-volume = 
 label-volume-foreground = ${root.foreground}
 format-volume-underline = ${colors.foreground}
+format-volume-padding = 1
  
 format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground}
-label-muted = muteado
+label-muted = Muted
 format-muted-underline = ${colors.foreground}
+format-muted-padding = 1
  
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
@@ -248,20 +216,23 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
- 
+
 [module/battery]
 type = internal/battery
 full-at = 98
  
 format-charging = <animation-charging> <label-charging>
 format-charging-underline = ${colors.foreground}
+format-charging-padding = 1
  
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
+format-discharging-padding = 1
  
 format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
+format-full-padding = 1
  
 ramp-capacity-0 = 
 ramp-capacity-1 = 
@@ -306,8 +277,8 @@ expand-right = true
 format-spacing = 1
  
 label-open = 
-;label-open-foreground = ${colors.red}
 label-open-underline = ${colors.foreground}
+label-open-padding = 1
 label-close = cancel
 label-close-foreground = ${colors.red}
 label-separator = |
@@ -327,45 +298,10 @@ menu-2-0 = power off
 menu-2-0-exec = poweroff
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
- 
-[module/xbacklight]
-type = internal/xbacklight
- 
-format = <label> <bar>
-format-underline = ${colors.foreground}
-label = BL
- 
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #ff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #55aa55
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
- 
-[module/backlight]
-type = custom/script
- 
-scroll-up = exec sudo ~/.config/polybar/uplight.sh
-scroll-down = exec sudo ~/.config/polybar/downlight.sh
- 
-exec = cat /sys/class/backlight/amdgpu_bl0/brightness
- 
-format = <label>
-label = %output%
- 
+
 [settings]
 screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
  
 [global/wm]
 margin-top = 5
 margin-bottom = 0
- 
-; vim:ft=dosini
