--- a/polybar/config
+++ b/polybar/config
@@ -279,24 +279,24 @@ format-spacing = 1
 label-open = 
 label-open-underline = ${colors.foreground}
 label-open-padding = 1
-label-close = cancel
+label-close = Cancel
 label-close-foreground = ${colors.red}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
  
-menu-0-0 = reboot
+menu-0-0 = Reboot
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
+menu-0-1 = Shutdown
 menu-0-1-exec = menu-open-2
  
-menu-1-0 = cancel
+menu-1-0 = Cancel
 menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = reboot
+menu-1-1 = Reboot
+menu-1-1-exec = Reboot
  
-menu-2-0 = power off
-menu-2-0-exec = poweroff
-menu-2-1 = cancel
+menu-2-0 = Shutdown
+menu-2-0-exec = Shutdown
+menu-2-1 = Cancel
 menu-2-1-exec = menu-open-0
 
 [settings]
