--- a/i3/desktop.config
+++ b/i3/desktop.config
@@ -73,6 +73,10 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+# move workspace
+bindsym $mod+Shift+o move workspace to output left
+bindsym $mod+Shift+p move workspace to output right
+
 # split in horizontal orientation
 bindsym $mod+h split h
 
